# O3PRMEditor

./: .gitignore  BUGS.txt  CHANGELOG.txt  CHANGELOG.txt~  CMakeLists.txt  FILES.txt  Makefile  Makefile.qmake  README.md  README.txt  Toolchain-mingw32.cmake  debug.txt  installer_script.nsi  o3prmEditor.files  o3prmEditor.includes
DEBIAN/: control  postrm
debug/: CMakeCache.txt  Makefile  cmake_install.cmake  moc_prmcompleter.cxx_parameters  moc_prmtreemodel.cxx_parameters  moc_project.cxx_parameters  moc_qcommandlineedit.cxx_parameters  moc_qkeysequencewidget.cxx_parameters  moc_qsciscintillaextended.cxx_parameters
debug/controllers/: moc_buildcontroller.cxx_parameters  moc_editcontroller.cxx_parameters  moc_filecontroller.cxx_parameters  moc_projectcontroller.cxx_parameters  moc_searchcontroller.cxx_parameters  moc_viewcontroller.cxx_parameters
debug/lexers/: moc_qscilexero3prml.cxx_parameters  moc_qscilexero3prml2.cxx_parameters  moc_qscilexero3prmr.cxx_parameters
debug/parsers/: moc_abstractparser.cxx_parameters  moc_o3prmlinterpretation.cxx_parameters  moc_o3prmrinterpretation.cxx_parameters
debug/uis/: moc_advancedsearch.cxx_parameters  moc_mainwindow.cxx_parameters  moc_newprojectdialog.cxx_parameters  moc_projectproperties.cxx_parameters  moc_properties.cxx_parameters
release/: CMakeCache.txt  Makefile  cmake_install.cmake  moc_prmcompleter.cxx_parameters  moc_prmtreemodel.cxx_parameters  moc_project.cxx_parameters  moc_qcommandlineedit.cxx_parameters  moc_qkeysequencewidget.cxx_parameters  moc_qsciscintillaextended.cxx_parameters
release/controllers/: moc_buildcontroller.cxx_parameters  moc_editcontroller.cxx_parameters  moc_filecontroller.cxx_parameters  moc_projectcontroller.cxx_parameters  moc_searchcontroller.cxx_parameters  moc_viewcontroller.cxx_parameters
release/lexers/: moc_qscilexero3prml.cxx_parameters  moc_qscilexero3prml2.cxx_parameters  moc_qscilexero3prmr.cxx_parameters
release/parsers/: moc_abstractparser.cxx_parameters  moc_o3prmlinterpretation.cxx_parameters  moc_o3prmrinterpretation.cxx_parameters
release/uis/: moc_advancedsearch.cxx_parameters  moc_mainwindow.cxx_parameters  moc_newprojectdialog.cxx_parameters  moc_projectproperties.cxx_parameters  moc_properties.cxx_parameters
rsrc/doc/: index.html
src/: CMakeLists.txt  main.cpp  main_treeview.cpp  o3prmeditor.pro  prmcompleter.h  prmtreemodel.cpp  prmtreemodel.h  project.cpp  project.h  qcommandlineedit.cpp  qcommandlineedit.h  qkeysequencewidget.cpp  qkeysequencewidget.h  qsciscintillaextended.cpp  qsciscintillaextended.h  treeview.cpp  treeview.h
src/cmake/Modules/: FindQscintilla.cmake
src/controllers/: buildcontroller.cpp  buildcontroller.h  editcontroller.cpp  editcontroller.h  editorController.cpp  editorController.h  editorcontroller.cpp  editorcontroller.h  filecontroller.cpp  filecontroller.h  menucontroller.cpp  menucontroller.h  newsearchcontroller.cpp  newsearchcontroller.h  projectcontroller.cpp  projectcontroller.h  searchcontroller.cpp  searchcontroller.h  settingscontroller.cpp  settingscontroller.h  viewcontroller.cpp  viewcontroller.h
src/lexers/: qscilexero3prml.cpp  qscilexero3prml.h  qscilexero3prml2.cpp  qscilexero3prml2.h  qscilexero3prmr.cpp  qscilexero3prmr.h
src/models/: buildmodel.cpp  buildmodel.h  prmcompleter.cpp  prmcompleter.h  prmtreemodel.cpp  prmtreemodel.h  project.cpp  project.h  projectitem.cpp  projectitem.h  qcommandlineedit.cpp  qcommandlineedit.h  qsciscintillaextended.cpp  qsciscintillaextended.h  searchmodel.cpp  searchmodel.h  settings.cpp  settings.h  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h
src/parsers/: abstractparser.cpp  abstractparser.h  o3prmlinterpretation.cpp  o3prmlinterpretation.h  o3prmrinterpretation.cpp  o3prmrinterpretation.h
src/rsrc/: resources.qrc
src/rsrc/doc/: index.html  manuel.odt
src/test/: buildmodelTest.cpp  main.cpp  mockdir.h  mockqdir.h  projectFactoryTest.cpp  projectTest.cpp  treeItemTest.cpp
src/uis/: advancedsearch.cpp  advancedsearch.h  advancedsearch.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  newprojectdialog.cpp  newprojectdialog.h  projectproperties.cpp  projectproperties.h  properties.cpp  properties.h  properties.ui  treeview.cpp  treeview.h  treeview.ui
