# Declaring the project and generale info about it
PROJECT(O3PRMEDITOR)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(O3PRMEDITOR_VERSION_MAJOR "0")
SET(O3PRMEDITOR_VERSION_MINOR "5")
SET(O3PRMEDITOR_VERSION_PATCH "0")

# Configuring cmake
LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/Modules)

# Dependencies
FIND_PACKAGE(Qt4 REQUIRED)
SET(QT_USE_QTXML TRUE)

FIND_PACKAGE(Qscintilla REQUIRED)

FIND_PACKAGE(agrum REQUIRED)

# Listing source files
SET(O3PRMEDITOR_MAIN "${CMAKE_SOURCE_DIR}/src/main.cpp")
FILE(GLOB_RECURSE HEADERS "${CMAKE_SOURCE_DIR}/src/*.h")
FILE(GLOB_RECURSE SOURCES "${CMAKE_SOURCE_DIR}/src/*.cpp")
FILE(GLOB_RECURSE FORMS "${CMAKE_SOURCE_DIR}/src/*.ui")
FILE(GLOB_RECURSE RESSOURCES "${CMAKE_SOURCE_DIR}/src/*.qrc")

LIST(REMOVE_ITEM SOURCES "${CMAKE_SOURCE_DIR}/src/main.cpp")
# remove headers that we don't need to process with MOC
LIST(REMOVE_ITEM HEADERS "${CMAKE_SOURCE_DIR}/src/models/projectitem.h")

# Reproducing what QMake does
QT4_WRAP_CPP(HEADERS_MOC ${HEADERS})
QT4_WRAP_UI(FORMS_HEADERS ${FORMS})
QT4_ADD_RESOURCES(RESOURCES_RCC ${RESSOURCES})
INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})

# Adding include dirs and files
INCLUDE_DIRECTORIES(${AGRUM_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${QSCINTILLA_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${AGRUM_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)

# Checking for a C++11 compiler and adding flags
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -DNDEBUG -O0 -g")
FIND_PACKAGE(CXX11)
IF(CXX11_FOUND)
  SET(CMAKE_CXX_FLAGS "${CXX11_FLAGS} ${CMAKE_CXX_FLAGS}")
ELSE()
  MESSAGE(FATAL_ERROR "The aGrUM framework requires C++11. Please use a C++11 compliant compiler.")
ENDIF()

## Building the executable
ADD_EXECUTABLE(o3prmeditor ${O3PRMEDITOR_MAIN} ${SOURCES} ${HEADERS_MOC} ${FORMS_HEADERS} ${RESOURCES_RCC})
TARGET_LINK_LIBRARIES(o3prmeditor ${QT_LIBRARIES} ${QSCINTILLA_LIBRARIES} ${AGRUM_LIBRARIES})
if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
    SET_TARGET_PROPERTIES(o3prmeditor PROPERTIES LINK_FLAGS "-lstdc++")
endif()

