# Declaring the project and generale info about it
PROJECT(O3PRMEDITOR)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(O3PRMEDITOR_VERSION_MAJOR "0")
SET(O3PRMEDITOR_VERSION_MINOR "5")
SET(O3PRMEDITOR_VERSION_PATCH "0")

# Configuring cmake
LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/Modules)
set( CMAKE_CXX_STANDARD 14 )
set( CMAKE_CXX_STANDARD_REQUIRED on )

# Using C++ 14 
SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14" )

# No DEBUG
SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DNDEBUG" )

# Dependencies
FIND_PACKAGE(Qt4 REQUIRED)
SET(QT_USE_QTXML TRUE)

FIND_PACKAGE(QSCINTILLA REQUIRED)

FIND_PACKAGE(aGrUM NO_MODULE)

IF (aGrUM_FOUND)
  INCLUDE(${AGRUM_USE_FILE})
ELSE (aGrUM_FOUND)
  MESSAGE(FATAL_ERROR "Please install aGrUM")
ENDIF (aGrUM_FOUND)

# Listing source files
SET(O3PRMEDITOR_MAIN "${CMAKE_SOURCE_DIR}/src/main.cpp")
FILE(GLOB_RECURSE HEADERS "${CMAKE_SOURCE_DIR}/src/*.h")
FILE(GLOB_RECURSE SOURCES "${CMAKE_SOURCE_DIR}/src/*.cpp")
FILE(GLOB_RECURSE FORMS "${CMAKE_SOURCE_DIR}/src/*.ui")
FILE(GLOB_RECURSE RESSOURCES "${CMAKE_SOURCE_DIR}/src/*.qrc")

LIST(REMOVE_ITEM SOURCES "${CMAKE_SOURCE_DIR}/src/main.cpp")
# remove headers that we don't need to process with MOC
LIST(REMOVE_ITEM HEADERS "${CMAKE_SOURCE_DIR}/src/models/projectitem.h"
                         "${CMAKE_SOURCE_DIR}/src/models/settings.h")

# Reproducing what QMake does
QT4_WRAP_CPP(HEADERS_MOC ${HEADERS})
QT4_WRAP_UI(FORMS_HEADERS ${FORMS})
QT4_ADD_RESOURCES(RESOURCES_RCC ${RESSOURCES})
INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})

# Adding include dirs and files
INCLUDE_DIRECTORIES(${aGrUM_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${QSCINTILLA_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${aGrUM_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)

## Building the executable
ADD_EXECUTABLE(o3prmeditor ${O3PRMEDITOR_MAIN} ${SOURCES} ${HEADERS_MOC} ${FORMS_HEADERS} ${RESOURCES_RCC})
TARGET_LINK_LIBRARIES(o3prmeditor ${QT_LIBRARIES} ${QSCINTILLA_LIBRARIES} ${AGRUM_LIBRARIES_RELEASE})

