# Declaring the project and generale info about it
PROJECT(O3PRMEDITOR)


set(AGRUM_INSTALLATION_DIRECTORY "/home/phw/usr")
set(aGrUM_DIR "${AGRUM_INSTALLATION_DIRECTORY}/lib/cmake/aGrUM/")


CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(O3PRMEDITOR_VERSION_MAJOR "0")
SET(O3PRMEDITOR_VERSION_MINOR "4")
SET(O3PRMEDITOR_VERSION_PATCH "0")

SET(CMAKE_VERBOSE_MAKEFILE "ON")

# Configuring cmake
LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/Modules)

# Dependencies
FIND_PACKAGE(Qt4 REQUIRED)
SET(LIBS ${LIBS} ${QT_LIBRARIES})

FIND_PACKAGE(Qscintilla REQUIRED)
INCLUDE_DIRECTORIES(${QSCINTILLA_INCLUDE_DIRS})
SET(LIBS ${LIBS} ${QSCINTILLA_LIBRARIES})

include(ExternalProject)
ExternalProject_Add(AGRUM
    PREFIX aGrUM
    GIT_REPOSITORY git://forge.lip6.fr/aGrUM
    CONFIGURE_COMMAND cd <SOURCE_DIR> ; ./act --no-fun  agrum release -p linux -j 7
)

#FIND_PACKAGE(aGrUM)
#IF(AGRUM_FOUND)
#  MESSAGE(STATUS "Found aGrUM")
#  MESSAGE(STATUS "aGrUM include : ${AGRUM_INCLUDE_DIR}")
#  MESSAGE(STATUS "aGrUM lib : ${AGRUM_LIB_DIR}")
#  include_directories(${AGRUM_INCLUDE_DIR})
#  link_directories(${AGRUM_LIB_DIR})
#ELSE()
#    MESSAGE(FATAL_ERROR "---> aGrUM not found !")
#ENDIF()
#SET(LIBS ${LIBS} ${AGRUM_LIB_DIR})

# Reproducing what qmake does
FILE(GLOB_RECURSE O3PRM_SOURCES *.cpp)
FILE(GLOB_RECURSE O3PRM_HEADERS *.h)
FILE(GLOB_RECURSE O3PRM_FORMS *.ui)
FILE(GLOB_RECURSE O3PRM_RESOURCES *.qrc)
FILE(GLOB_RECURSE O3PRM_RC_FILE *.rc)

QT4_WRAP_CPP(O3PRM_HEADERS_MOC ${O3PRM_HEADERS})
QT4_WRAP_UI(O3PRM_FORMS_HEADERS ${O3PRM_FORMS})
QT4_ADD_RESOURCES(O3PRM_RESOURCES_RCC ${O3PRM_RESOURCES})

INCLUDE(${QT_USE_FILE})
INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR})
ADD_DEFINITIONS(${QT_DEFINITIONS})

INCLUDE_DIRECTORIES(${O3PRMEDITOR_SOURCE_DIR})

# Checking for a C++11 compiler
FIND_PACKAGE(CXX11)
IF(CXX11_FOUND)
  SET(O3PRMEDITOR_CXX_FLAGS "${CXX11_FLAGS} ${O3PRM_CXX_FLAGS}" )
ELSE()
  MESSAGE(FATAL_ERROR "The aGrUM framework requires C++11. Please use a C++11 compliant compiler.")
ENDIF()

# Compiling flags
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${O3PRMEDITOR_CXX_FLAGS}")

SET(CMAKE_CXX_FLAGS_DEBUG "${O3PRMEDITOR_CXX_FLAGS} -O0 -g -DNDEBUG")
SET(CMAKE_CXX_FLAGS_RELEASE "${O3PRMEDITOR_CXX_FLAGS} -O3 -DNDEBUG")

# Building the executable
ADD_EXECUTABLE(o3prmeditor ${O3PRM_SOURCES} ${O3PRM_HEADERS_MOC} ${O3PRM_FORMS_HEADERS} ${O3PRM_RESOURCES_RCC})

TARGET_LINK_LIBRARIES(o3prmeditor ${QT_LIBRARIES} ${QSCINTILLA_LIBRARIES} agrum)
SET_TARGET_PROPERTIES(o3prmeditor PROPERTIES LINK_FLAGS "-lstdc++")
